product added in swagger
